--- a/journal/201903.md
+++ b/journal/201903.md
@@ -1,5 +1,6 @@
 <div dir="rtl">
 
+
 # صحيفة الديكريد لشهر مارس 2019
 
 ![abstract art](../img/journal-201903-384.jpg)
@@ -171,7 +172,7 @@
 مناقشات:
 
 *	[إعادة النظر](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$155298850932396heGyM:decred.org) في [فكرة قديمة](https://github.com/decred/dcrweb/issues/66) لإعطاء "اعتمادات غير مركزية" رؤية أوسع.
-*	[سؤال](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$155309851735051wGBlh:decred.org) ما إذا كان الديكريد يحتاج مصطلح أكثر تحديدا من "الإستثمار مع المخاطرة" الذي هو مبتذل، غامض و مستخدم من قبل العديد من مشاريع العملات الرقمية. إن قرار التخلي عن السيولة مقابل  الحق في المشاركة في الإدارة يتطلب تعبيرًا أكثر جدوى ويعكس الفرق بين المشروعات المعتمدة وغيرها. وهذا المفهوم وغيره من المفاهيم التي تحمل أسماء عائمة تم ذكرها في [هذه المسألة](https://github.com/xaur/decred-issues/issues/65).
+*	[سؤال](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$155309851735051wGBlh:decred.org) ما إذا كان الديكريد يحتاج مصطلح أكثر تحديدا من "جلد في اللعبة" ( تحمل المخاطره المالية في سبيل تحقيق الهدف)الذي هو مبتذل، غامض و مستخدم من قبل العديد من مشاريع العملات الرقمية. إن قرار التخلي عن السيولة مقابل  الحق في المشاركة في الإدارة يتطلب تعبيرًا أكثر جدوى ويعكس الفرق بين المشروعات المعتمدة وغيرها. وهذا المفهوم وغيره من المفاهيم التي تحمل أسماء عائمة تم ذكرها في [هذه المسألة](https://github.com/xaur/decred-issues/issues/65).
 
 ## الفعاليات
 
@@ -216,7 +217,7 @@
 *	تهدف الديكريد إلى الوصول إلى المثل اللامركزية للعملات الرقمية  بواسطة Tomio Geron (على [wsj.com](https://www.wsj.com/articles/gerons-take-decred-aims-to-reach-cryptos-decentralized-ideals-11552523191) و paywall ، يوصى بمشاركة واسعة النطاق لتضخيم التأثير)
 *	الديكريد، تجربة في الإدارة على السلسلة من تأليف Steven Zheng (على [theblockcrypto.com](https://www.theblockcrypto.com/2019/03/20/decred-an-experiment-in-on-chain-governance/) و paywall)
 *	شرح آلية إجماع إثبات العمل/إثبات الحصة الهجينة  بواسطة  richardred@ (على  [binance.vision](https://www.binance.vision/blockchain/hybrid-pow-pos-consensus-explained))
-*	تجربة إدارة الديكريد "المخاطر الإستثمارية" التي أصدرها جيريمي إبشتاين (في [neverstopmarketing.com](https://www.neverstopmarketing.com/decred-and-democracy/)، شكرًا على الكلمات الطيبة!)
+*	تجربة إدارة الديكريد "جلد في اللعبة" التي أصدرها جيريمي إبشتاين (في [neverstopmarketing.com](https://www.neverstopmarketing.com/decred-and-democracy/)، شكرًا على الكلمات الطيبة!)
 *	المزيد من التبادلات ، المزيد من  فرص الوصول: نمو  توافر و سيولة الديكريد بواسطة Dustorf@ (على [medium](https://medium.com/decred/more-exchanges-more-access-decred-grows-availability-liquidity-95accbbf6835))
 *	نظرة عامة عن الديكريد بواسطة Casey Caruso (على [medium](https://medium.com/@caseycaruso/decred-dcr-1c809eb8bc5d))
 *	كيف ألقي خطابا عن الديكريد في إفريقيا بواسطة  George Pro@ (على [medium](https://medium.com/@aappiahpro1/how-i-pitch-decred-in-africa-62b9ee8da7e1))
