--- a/journal/201903.md
+++ b/journal/201903.md
@@ -7,9 +7,9 @@
 
 شهد شهر مارس بعض المقترحات والتصويتات المهمة التي تخص الإدارة، وتقدمًا ملموسًا في البرامج الأساسية الخاصة بالتطوير - كان شهرًا نموذجيًا إلى حد ما بالنسبة للديكريد.
 
-اقترب آخر [تصويت بالإجماع](https://voting.decred.org/)  [لإصلاح](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) أقفال تسلسل الشبكة البرقية حاليًا من الانتهاء بدعم بلغ 100٪ تقريبًا ومشاركة 54٪ من الناخبين، من المتوقع أن ينتهي التصويت في 11 أبريل. 
+حالياً اقترب آخر [تصويت بالإجماع](https://voting.decred.org/)  [لإصلاح](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) أقفال تسلسل الشبكة البرقية من الانتهاء بتأييد بلغ قرابة 100٪  وبمشاركة 54٪ من الناخبين، من المتوقع أن ينتهي التصويت في 11 أبريل. 
 
-تم نشر خمسة مقترحات على بوليتيا وانتهى مقترحان من التصويت (قبل أحدهما و الآخر رفض). ومن بين أهم المقترحات الجديدة المقدمة [واحد](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) ل moo31337@ والذي يمهد الطريق نحو السيطرة اللامركزية لأصحاب الحصص على إنفاق الخزينة.
+تم نشر خمسة مقترحات على بوليتيا وانتهى مقترحان من التصويت (قبل أحدهما و الآخر رفض). ومن بين أهم المقترحات الجديدة المقدمة [واحد](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) ل moo31337@ والذي يمهد الطريق نحو تمكين أصحاب الحصص من التحكم بإنفاق الخزينة بطريقة لامركزية.
 
 شهدت dcrd [إعادة تصميم ضخم](https://github.com/decred/dcrd/pull/1656)  من شأنه أن يجلب تحسينات كبيرة في الأداء لجميع المستخدمين عند إصدار النسخة 1.5.0، ويمكن للمستخدمين المتقدمين بنائه من المصدر اليوم.
 
@@ -21,7 +21,7 @@
 
 كجزء من التحسين، تم إعادة تصميم برنامج `txscript` بالكل لاستخدام رمز مميز جديد للتخصيص الصفري.
 
-> المزامنة الأولية هي عامل كبير بالطبع، ولكن المكاسب الحقيقية تكمن في معالجة المعاملات الجارية للمجمع. الوجه الآخر الجميل حقًا هو الرمز المميز الذي تم تصديره مما يعني أنه من الممكن إجراء تحليل التخصيص الصفري على البرامج النصية خارج txscript وهو أمر رائع لإنشاء التطبيقات (على سبيل المثال المقايضات الذرية أو taproot و ما إلى ذلك). ([davecgh@](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$155249146926580yNJqU:decred.org))
+> المزامنة الأولية هي عامل كبير بالطبع، ولكن المكاسب الحقيقية تكمن في معالجة المعاملات الجارية للمجمع. الوجه الآخر الجميل حقًا هو الرمز المميز الذي تم تصديره مما يعني أنه من الممكن إجراء تحليل التخصيص الصفري على البرامج النصية خارج txscript وهو أمر رائع لإنشاء التطبيقات (على سبيل المثال المبادلات الذرية أو taproot و ما إلى ذلك). ([davecgh@](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$155249146926580yNJqU:decred.org))
 
 نظرًا لتغيير منطقة حرجة ومعرضة للخطأ في رمز الإجماع، فقد تم بذل جهد كبير لجعل هذه التغييرات أسهل للفهم والمراجعة من خلال صياغة سلسلة من 122 من الالتزامات الفردية بحيث تصف كل رسالة التزام الغرض منها بدقة، وتحافظ على الإجماع، وبالتالي تجتاز كل الاختبارات. المكافأة: خفض إعادة تصميم البرنامج إلى 2،000 سطر من رموز التشفير. رموز تشفير أقل، أخطاء أقل!
 
@@ -29,25 +29,25 @@
 
 الأعمال المدمجة الأخرى: دعم عنوان Bech32 الأولي ([BIP 173](https://github.com/bitcoin/bips/blob/master/bip-0173.mediawiki)) الذي تم [نقله](https://github.com/decred/dcrd/pull/1646) من btcsuite، وتقديم وحدة [ذاكرة تخزين مؤقتة LRU](https://github.com/decred/dcrd/pull/1683) قابلة لإعادة الاستخدام، كما تمت [إعادة تصميم](https://github.com/decred/dcrd/pull/1696) وحدة `hdkeychain` لجعل رمزالشفرة أقل هشاشة وقابل للاختبار، كما [أضيفت](https://github.com/decred/dcrd/pull/1424) خلفية جديدة لكتل قوالب المولدات. وقد تم إجراء الكثير من توضيح التعليمات البرمجية واختبار التحسينات لتقوية قاعدة التعليمات البرمجية ضد التغييرات غير المقصودة.
 
-تم دمج ما مجموعه [209 إلتزام](https://github.com/decred/dcrd/compare/4e7f080b7b2cb11a8680d54dc5fb9ce735119d15...8f5019e083e92f31b2799f9d23809e0c0692d465) من 9 مساهمين في مارس.
+تم دمج ما مجموعه [209 إيداع](https://github.com/decred/dcrd/compare/4e7f080b7b2cb11a8680d54dc5fb9ce735119d15...8f5019e083e92f31b2799f9d23809e0c0692d465) من 9 مساهمين في مارس.
 
 قيد التنفيذ: [بدأت](https://github.com/decred/dcrd/pull/1698) عملية إعادة هيكلة كبيرة أخرى لمعالجة العديد من المشكلات في وحدة `chaincfg`، و[بدأت](https://github.com/decred/dcrd/issues/1645) المناقشة لحماية معالج عقد البذور من هجمات DNS.
 
 وفي الصورة الكبيرة، تهدف التغييرات مثل مولد قالب الكتلة الخلفية وجزء من استمثال `txscript` إلى تحسين قابلية التوسع وتقليل عدد الأصوات المفوتة على الشبكة من خلال إدخال تحسينات على البنية الأساسية للتعدين وتقليل زمن انتقال الأصوات. الجزء الآخر من إعادة هيكلة `txscript` و `chaincfg` هو العمل على البنية الأساسية لإدخال نسخة جديدة من محرك البرنامج النصي بشكل صحيح للتغييرات المستقبلية المرغوبة للإجماع مثل إنفاق الخزانة اللامركزي. حتى إذا لم ينجح هذا [الاقتراح](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f)، فلا تزال هناك حاجة للبنية الأساسية لمجموعة واسعة من التغييرات المستقبلية المتعلقة بالإجماع.
 
-[dcrwallet](https://github.com/decred/dcrwallet): تم إصلاح العلل وصيانة التعليمات البرمجية. دمج [12 إلتزام](https://github.com/decred/dcrwallet/compare/9f5f1163d8bf8037138f07734002470d4100de21...9450c9183e71231065dc0ea25087a47e8e5bb38e) من 6 مساهمين.
+[dcrwallet](https://github.com/decred/dcrwallet): تم إصلاح العلل وصيانة التعليمات البرمجية. دمج [12 إيداع](https://github.com/decred/dcrwallet/compare/9f5f1163d8bf8037138f07734002470d4100de21...9450c9183e71231065dc0ea25087a47e8e5bb38e) من 6 مساهمين.
 
-[Decrediton](https://github.com/decred/decrediton): تم دمج التصور الخاص بخريطة النشاط الحراري للتذكرة من بين إصلاحات أصغر - مجموع [5 إلتزامات](https://github.com/decred/decrediton/compare/35ab6e216dde0bc90d76334e25eb5174bf62e623...f80e832e55231a8f4cb7b1aa69f6e2faea2709df) من اثنين من المساهمين.
+[Decrediton](https://github.com/decred/decrediton): تم دمج التصور الخاص بخريطة النشاط الحراري للتذكرة من بين إصلاحات أصغر - مجموع [5 إيداعات](https://github.com/decred/decrediton/compare/35ab6e216dde0bc90d76334e25eb5174bf62e623...f80e832e55231a8f4cb7b1aa69f6e2faea2709df) من اثنين من المساهمين.
 
 [بوليتيا](https://github.com/decred/politeia): تمت إضافة علامة التبويب  [لمعاينة](https://github.com/decred/politeiagui/pull/1018) نص الاقتراح، والميزة المكتملة [لعرض الفرق](https://github.com/decred/politeiagui/pull/1004) بين الإصدارات المقترحة، مع تغيير [تصنيف التعليقات الافتراضي](https://github.com/decred/politeiagui/pull/1034) لإظهار التعليقات الأعلى درجة أولاً، وإضافة القدرة على تحديد الترتيب في عنوان URL. وقد أصلحت العديد من العلل. كما تم دمج هذه التغييرات في الفرع الرئيسي وسيتم نشرها على [موقع الاقتراحات الرئيسي](https://proposals.decred.org/) بعد إجراء بعض الاختبارات على [موقع الاختبار](https://test-proposals.decred.org/).
 
-فيما يتعلق بالبنية التحتية لرمز التشفير، تم تنزيل أجزاء عديدة من نظام إدارة المقاول بشكل رئيسي بعد تنظيف قاعدة رمز التشفير بعد مرحلة التطوير السريع. كما تمت [زيادة](https://github.com/decred/politeia/pull/727) نسبة تغطية الاختبار من 13٪ إلى 19٪. 
+فيما يتعلق بالبنية التحتية لرمز التشفير، تم تنزيل أجزاء عديدة من نظام إدارة المتعاقد بشكل رئيسي بعد تنظيف قاعدة رمز التشفير بعد مرحلة التطوير السريع. كما تمت [زيادة](https://github.com/decred/politeia/pull/727) نسبة تغطية الاختبار من 13٪ إلى 19٪. 
 
 اكتشف خلل سمح للمستخدمين المتقدمين بالإدلاء بأصواتهم بعد نهاية فترة التصويت. كانت العلة معروفة لبعض الوقت وكان الإصلاح في انتظار التدشين. وعند معرفة أن الأصوات المتأخرة كانت تحدث، تم تدشين الإصلاح في 13 مارس. و تظهر واجهة المستخدم لبوليتيا عددا قليلاً غير صحيح من الأصوات لبعض المقترحات، ولكن نتائج التصويت لم تتأثر.
 
-> الجزء المطمئن بشأن بوليتيا هو أن جميع البيانات متاحة للجمهور ويتم وضعها دوريا في بلوكشين الديكريد. هذا يعني أنه يمكن لأي شخص سحب البيانات من github والتحقق من أن التشفير يتحقق من الأصوات التي تم الإدلاء بها خلال فترة التصويت (+/- خلال ساعة واحدة) وأي من الأصوات تم الإدلاء بها بعد انتهاء فترة التصويت. (lukebp@ في [Politeia Digest 12](https://richardred0x.github.io/politeia-digest/issue-012.html))
+> الجزء المطمئن بشأن بوليتيا هو أن جميع البيانات متاحة للجمهور ويتم وضعها دوريا في بلوكشين الديكريد. هذا يعني أنه يمكن لأي شخص سحب البيانات من github والتحقق تشفيرياً من الأصوات التي تم الإدلاء بها خلال فترة التصويت (+/- خلال ساعة واحدة) وأي من الأصوات تم الإدلاء بها بعد انتهاء فترة التصويت. (lukebp@ في [Politeia Digest 12](https://richardred0x.github.io/politeia-digest/issue-012.html))
 
-تم دمج ما مجموعه 40 التزاما في [بوليتيا](https://github.com/decred/politeia/compare/8057ced5e4c0a04823a261cc064602f1a8a2ab1b...13eb0038975ff4fcddb70565687434354d208a0f) و [politeiagui](https://github.com/decred/politeiagui/compare/52c775330beb1b77ed817c85bccaaf2a8e199cdc...72885ed6e58c8a2f1bfbd2d039f6cd19b52912fe) من 6-9 مساهمين.
+تم دمج ما مجموعه 40 إيداع في [بوليتيا](https://github.com/decred/politeia/compare/8057ced5e4c0a04823a261cc064602f1a8a2ab1b...13eb0038975ff4fcddb70565687434354d208a0f) و [politeiagui](https://github.com/decred/politeiagui/compare/52c775330beb1b77ed817c85bccaaf2a8e199cdc...72885ed6e58c8a2f1bfbd2d039f6cd19b52912fe) من 6-9 مساهمين.
 
 [dcrandroid](https://github.com/decred/dcrandroid): إصلاح الأخطاء الطفيفة، مع إضافة الترجمة الصينية ، وتحسينات سرعة عرض تاريخ المعاملات.
 
@@ -55,13 +55,13 @@
 
 [dcrdata](https://github.com/decred/dcrdata): تم [إصدار](https://twitter.com/decredexplorer/status/1110618796975370240) النسخة 4 وهي متاحة على [explorer.dcrdata.org](https://explorer.dcrdata.org/).
 
-تشمل التغييرات التي يواجهها المستخدم إعادة تصميم كاملة مع أنماط جديدة للصفحات ومزيد من المعلومات وتنظيم أفضل، صفحات بوليتيا للاقتراح ومعلومات مجمعة عن الكتل على فترات زمنية مع تسجيل وتحجيم خطي للمخططات ومراقبة سعر الصرف و عدة أشياء أصغر أخرى. يشاع أن العلامة المائية للحفظ في المحفظة قد اختفت. للحصول على تحديثات التطوير، راجع [ملاحظات الإصدار الكامل](https://github.com/decred/dcrdata/releases/tag/v4.0.0).
+تشمل التغييرات التي يواجهها المستخدم إعادة تصميم كاملة مع أنماط جديدة للصفحات ومزيد من المعلومات وتنظيم أفضل، صفحات بوليتيا للاقتراح ومعلومات مجمعة عن الكتل على فترات زمنية مع تسجيل وتحجيم خطي للمخططات ومراقبة سعر الصرف و عدة أشياء أخرى صغيرة. يشاع أن العلامة المائية للحفظ في المحفظة قد اختفت. للحصول على تحديثات التطوير، راجع [ملاحظات الإصدار الكامل](https://github.com/decred/dcrdata/releases/tag/v4.0.0).
 
-خلال 3 أشهر من التطوير، تلقى إصدار النسخة 4، 48 ألف إضافة مدهشة و حذف 19 ألف سطر في 325 إلتزام من 11 مساهمًا. مبروك dcrdata!
+خلال 3 أشهر من التطوير، تلقى إصدار النسخة 4، 48 ألف إضافة مدهشة و حذف 19 ألف سطر في 325 إيداع من 11 مساهمًا. مبروك dcrdata!
 
 > هناك ميزات و تحسينات  تتشكل بالفعل في النسخة 4.1، لذلك فالإصدار الجديد سيطلق قريبا. مجال 4.0 مرعب قليلا، ولكن ذلك لسبب وجيه، وكان يستحق ذلك.([chappjc@](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155305431834229kjptE:decred.org))
 
-في طور التنفيذ: يستمر اختبار التحميل وتحسين الأداء، والتحسينات في إعتماد الإدارة مع وحدات  Go، و[تتبع تصويت](https://github.com/decred/dcrdata/pull/1125) الإجماع المباشر، [رسوم بيانية](https://github.com/decred/dcrdata/pull/1126) أسرع، [مخططات](https://github.com/decred/dcrdata/pull/1210) تصويت المقترحات، و [dcrextdata](https://github.com/raedahgroup/dcrextdata) - أحد مكونات dcrdata التي تتيح تتبع البيانات غير الموجودة على البلوكشين ، مثل المعلومات التاريخية حول أسعار الصرف ومجمعات التعدين.
+في طور التنفيذ: يستمر اختبار التحميل وتحسين الأداء، والتحسينات في إعتماد الإدارة مع وحدات  Go، و[تتبع تصويت](https://github.com/decred/dcrdata/pull/1125) الإجماع المباشر، [رسوم بيانية](https://github.com/decred/dcrdata/pull/1126) أسرع، [مخططات](https://github.com/decred/dcrdata/pull/1210) تصويت المقترحات، و [dcrextdata](https://github.com/raedahgroup/dcrextdata) - أحد مكونات dcrdata التي تتيح تتبع البيانات غير الموجودة على البلوكشين ، مثل المعلومات التاريخية حول أسعار الصرف وتجمعات التعدين.
 
 [تقسيم التذاكر](https://github.com/matheusd/dcr-split-ticket-matcher): تم [إصدار](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.7.6) النسخة 0.7.6 والتي تعمل على تحسين جلب المخرجات غير المنفقة من dcrdata وإضافة الثنائيات على macOS.
 
@@ -77,11 +77,11 @@
 *	تم إنشاء أداة [dcrtime_checker](https://github.com/decred/dcrtime/tree/master/cmd/dcrtime_checker) جديدة للتحقق المباشر من نقاط الارتساء بَدَل البلوكشين (دون التفاعل مع dcrtimed).
 *	تم تحديث حوالي نصف موفري خدمة التصويت  [لاختبار الاستضافة الذاتية](https://github.com/decred/dcrstakepool/issues/279) لحماية خصوصية مستخدميهم. يمكن تتبع النظام [هنا](https://github.com/decred/dcrstakepool/issues/326). 
 
-إحصائيات نشاط التطوير لشهر مارس: 360 من المشاريع النشطة، 497 إلتزام رئيسي، 46 ألف إضافة، 34 ألف عملية حذف من خلال 8 سجلات. جاءت المساهمات من 2-9 مطورين لكل سجل.
+إحصائيات نشاط التطوير لشهر مارس: 360 من المشاريع النشطة، 497 إيداع رئيسي، 46 ألف إضافة، 34 ألف عملية حذف من خلال 8 سجلات. جاءت المساهمات من 2-9 مطورين لكل سجل.
 
 ## الأشخاص
 
-مرحبًا بالمساهمين  لأول مرة مع دمج الرمز في الفروع الرئيسية: devwarrior@  (على [atomicswap](https://github.com/decred/atomicswap/commits?author=devwarrior-cool)) و DominicTing (على [dcrweb](https://github.com/decred/dcrweb/pull/588)).
+مرحبًا بالمساهمين  لأول مرة مع دمج الكود في الفروع الرئيسية: devwarrior@  (على [atomicswap](https://github.com/decred/atomicswap/commits?author=devwarrior-cool)) و DominicTing (على [dcrweb](https://github.com/decred/dcrweb/pull/588)).
 
 ## الإدارة
 
@@ -118,7 +118,7 @@
 
 *	معدل [إنفاق الخزنة](https://www.reddit.com/r/decred/comments/b5vlrl/we_have_spent_23_of_decred_treasury_should_we_be/) وتخصيص الأموال.
 *	أفكار [للتقارير المالية](https://www.reddit.com/r/decred/comments/b2zopq/simple_financial_reporting/).
-*	تم رفع مستوى التصويت على التعليقات الخاصة مرة أخرى وأسفرت عن بعض الإجماع حول تعطيل هذه القدرة. كما تم إعادة فتح [المسألة](https://github.com/decred/politeiagui/issues/845) المقابلة وتحديثها لفهرسة جميع المناقشات حول الموضوع.
+*	تم ذكر مسألة التصويت على التعليقات الخاصة مرة أخرى وأسفرت عن بعض الإجماع حول تعطيل هذه القدرة. كما تم إعادة فتح [المسألة](https://github.com/decred/politeiagui/issues/845) المشابة وتحديثها لفهرسة جميع المناقشات حول الموضوع.
 *	اقترح richardred@ بناء النصاب القانوني فقط على النسبة المئوية [للأصوات بنعم](https://github.com/decred/politeia/issues/729) (يتم حاليًا احتساب أصوات نعم + لا) وإنتاج [محاكاة](https://github.com/RichardRed0x/pi-research/blob/master/analysis/voting/quorum-change-examples.md) تصور طرق حساب النصاب المختلفة.
 
 ## الشبكة
@@ -144,7 +144,7 @@
 *	تشير [صفحة الدعم](https://support.okex.com/hc/zh-cn/articles/360024177931-%E6%94%AF%E6%8C%81%E5%B8%81%E7%A7%8D) الصينية هذه إلى أن OKEx بها تجمع تعدين جديد للديكريد.
 *	أعلن سكوت أوفورد على تويتر أن MicroBT تبيع آخر 200 وحدة من Whatsminer D1 بسعر 750 دولارًا لكل وحدة ولا تخطط لإنتاج أي آلة لتعدين الديكريد بعد ذلك.
 
-## الدمج
+## الإنضمام
 
 عقب [فعالية](https://www.eventbrite.com/e/decred-okcoin-present-the-next-10-years-crypto-boom-bust-or-buidl-tickets-57549671617) مشتركة في سان فرانسيسكو، [أعلنت](https://twitter.com/OKCoin/status/1105892924586258434) OKCoin عن إدراج أزواج DCR مقابل BTC و ETH والدولار الأمريكي، بالإضافة إلى زوج عملات ورقية آخرى ل DCR. تم التقاط الأخبار من قبل [The Block](https://www.theblockcrypto.com/tiny/okcoin-offers-first-usd-to-crypto-trading-pair-for-decred-but-difficult-questions-remain/) وعدة منابر أصغر.
 
@@ -156,7 +156,7 @@
 
 إنجازات ديتو لشهر مارس:
 
-*	تأمين نشر [مقال  رئيسي](https://www.wsj.com/articles/gerons-take-decred-aims-to-reach-cryptos-decentralized-ideals-11552523191) حول الديكريد في جريدة وول ستريت جورنال عن طريق تسهيل إجراء مقابلات متعددة مع Jake Yocom-Piatt و Chris Burniske من Placeholder VC. أكثر من أي تغطية إعلامية تم إنشاؤها حتى الآن، وصفت هذه المقالة على نحو أكثر فاعلية الديكريد لجمهور واسع، غير مشفر، من صانعي القرار المالي - مما يعزز بشكل كبير من وضوح ومصداقية خارج عالم العملات الرقمية. النص متاح [هنا](https://www.reddit.com/r/decred/comments/b12z34/gerons_take_decred_aims_to_reach_cryptos/eiiwnpm/)، و القصة بالكامل [هنا](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155268940829940XRdUb:decred.org).
+*	تأمين نشر [مقال  رئيسي](https://www.wsj.com/articles/gerons-take-decred-aims-to-reach-cryptos-decentralized-ideals-11552523191) حول الديكريد في جريدة وول ستريت جورنال عن طريق تسهيل إجراء مقابلات متعددة مع Jake Yocom-Piatt و Chris Burniske من Placeholder VC. أكثر من أي تغطية إعلامية تم إنشاؤها حتى الآن، وصفت هذه المقالة على نحو أكثر فاعلية الديكريد لجمهور واسع، غير جمهور العملات الرقمية  من صانعي القرار المالي - مما يعزز بشكل كبير من وضوح ومصداقية خارج عالم العملات الرقمية. النص متاح [هنا](https://www.reddit.com/r/decred/comments/b12z34/gerons_take_decred_aims_to_reach_cryptos/eiiwnpm/)، و القصة بالكامل [هنا](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155268940829940XRdUb:decred.org).
 *	تأمين [ملف تعريف تقني](https://www.theblockcrypto.com/2019/03/20/decred-an-experiment-in-on-chain-governance/) متعمق للديكريد في The Block. نسخة النص الخام [هنا](https://pastebin.com/Dg2ELYat).
 *	تيسير 5 مقابلات: مقابلة أساسية مع لورا شين (مضيفة المدونة الصوتية المحررة / غير المؤكدة) ، مقابلتان مع محلل CryptoBriefing لتقرير بحثي متعمق، واحد مع The Block نتج عنه تشخيص جانبي مطول عن الديكريد، و واحد مع جريدة وول ستريت جورنال التي أدت إلى مقالة مميزة.
 *	وساعدت في تنظيم و إدراج الديكريد في فعالية OKCoin.
