--- a/journal/201903.md
+++ b/journal/201903.md
@@ -349,6 +349,6 @@
 
 قم بزيارة مجلة الديكريد باللغة الإنجليزية على الرابط التالي: [رابط الصفحة](https://github.com/xaur/decred-news/blob/master/journal/201903.md).
 
-تمت الترجمة إلى اللغة العربية بواسطة: butterfly@.
+تمت الترجمة إلى اللغة العربية بواسطة: butterfly@، قام بمراجعته abdulrahman4@.
 
 </div>
