--- a/journal/201904.md
+++ b/journal/201904.md
@@ -2,7 +2,7 @@
 
 # صحيفة الديكريد لشهر أبريل 2019
 
-![abstract art](../img/journal-201904-384.jpg "Blue Dragon by @saender. Dragon resembles power/fear/terror/chaos. Blue dragon is calm and intelligent, but nevertheless powerful. It resembles a balance of power and wisdom.")
+![abstract art](../img/journal-201904-384.jpg)
 
 شهد شهر أبريل إطلاق الشبكة البرقية على تيستنيت الخاص بـالديكريد! هذا هو الوقت المناسب [للتحقق منه](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e)، القيام ببعض الاختبارات، والبدء في البناء على الشبكة البرقية للديكريد.
 
