--- a/journal/201904.md
+++ b/journal/201904.md
@@ -143,7 +143,7 @@
 * 8 أبريل - [الديكريد: الأدوات، الاستخدام والمساهمة](https://www.meetup.com/decredpdx/events/260098916/) - بورتلاند، الولايات المتحدة الأمريكية. استمع 17 من الحاضرين ل oregonisaac@ يتحدث بتعمق عن أدوات الديكريد، استخداماتها إسهامها، وتحديثات التطوير بواسطة raedah@، oregonisaac@ و s\_ben@. المجتمع آخذ في النمو من حيث العدد والمشاركة. الجميع متحمس ونتطلع إلى اللقاء المقبل. ([الصور](https://twitter.com/DecredPdx/status/1115734111174291456))
 * 18 أبريل - [تنسيق المصدر المفتوح: اليوم وغدا](https://www.meetup.com/San-Francisco-Decred-Meetup/events/260046546/) - مقر Coinbase، سان فرانسيسكو، الولايات المتحدة الأمريكية. أقيمت الفعالية في Coinbase HQ بالشراكة مع Coinbase Custody. تحدث lukebp@ عن نموذج الإدارة والتمويل الذاتي الفريد الخاص بالديكريد. ثم جرت مناقشة مدروسة حول مقايضات نماذج التمويل المختلفة، وأجاب لوك على الأسئلة لأكثر من ساعة. حضر حوالي 70 شخص. (الصور: [1](https://twitter.com/liz_bagot/status/1119098216165695495) [2](https://twitter.com/LarissaBundziak/status/1119340380187529216)))
 * 18 أبريل - [Binance LATAM AMA](https://twitter.com/binance/status/1118883131799400449) - عبر الإنترنت. شارك elian@ في 'إسألني أي شيء' AMA باللغة الإسبانية مع أعضاء من مجتمع  Binance Latam، حيث تلقى أسئلة وأجوبة من المستخدمين على الفايسبوك و التيليغرام.
-* 22-26 أبريل - [أرض المواهب](https://www.talent-land.mx/) - غوادالاخارا، المكسيك. قدم elian@ [ملخصًا]https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155690701035573YcsMH:matrix.org) عن الفعالية ومشاركة الديكريد. حضر الحدث أكثر من 60،000 شخص، وكانت الديكريد العملة الرقمية الرئيسية الوحيدة الممثلة في "Blockchain Land". حوار بعنوان "الديكريد: مال المستقبل " حضر حوالي 35 شخصًا، وتوقف مئات آخرون للتحدث إلى ممثلي الديكريد في الكشك. لقد استجاب الحاضرون جيدًا لفكرة "كن مصرفك الخاص"، وأيضًا مفهوم الديكريد باعتباره  برنامجا مفتوح المصدر وذي تمويل ذاتي. (الصور: [1](https://twitter.com/elianhuesca/status/1121243105276125184) [2](https://twitter.com/victorarubin/status/1121169425011494913))
+* 22-26 أبريل - [أرض المواهب](https://www.talent-land.mx/) - غوادالاخارا، المكسيك. قدم elian@ [ملخصًا](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155690701035573YcsMH:matrix.org) عن الفعالية ومشاركة الديكريد. حضر الحدث أكثر من 60،000 شخص، وكانت الديكريد العملة الرقمية الرئيسية الوحيدة الممثلة في "Blockchain Land". حوار بعنوان "الديكريد: مال المستقبل " حضر حوالي 35 شخصًا، وتوقف مئات آخرون للتحدث إلى ممثلي الديكريد في الكشك. لقد استجاب الحاضرون جيدًا لفكرة "كن مصرفك الخاص"، وأيضًا مفهوم الديكريد باعتباره  برنامجا مفتوح المصدر وذي تمويل ذاتي. (الصور: [1](https://twitter.com/elianhuesca/status/1121243105276125184) [2](https://twitter.com/victorarubin/status/1121169425011494913))
 * 24-25 أبريل - [قمة البلوكشين](http://blockchainsummit.ma/) - الرباط، المغرب. arij@ (الملقبة ب butterfly@ على Slack) قدمت وعرضت الديكريد. حضر بشكل رئيسي طلاب وأساتذة من المغرب وفرنسا. (الصور: [1](https://twitter.com/DecredArabia/status/1121011670808240128) [2](https://twitter.com/DecredArabia/status/1121160292333965313) [3](https://twitter.com/DecredArabia/status/1121695331253673984))
 * 25 أبريل - [لقاء الديكريد بشيكاغو](https://www.meetup.com/Chicago-Decred-Meetup/events/260653330/) - شيكاغو، الولايات المتحدة الأمريكية. استضاف جاك ميلر الاجتماع الافتتاحي في شيكاغو.
 * 29 أبريل - ['إسألني أي شيء' AMA المجتمع الصيني](https://www.chainnode.com/ama/317174) - عبر الإنترنت. قامHaon@ وguang@ بإجراء AMA مع أعضاء من مجتمع الديكريد الصيني، حيث تلقوا أكثر من 30 سؤالًا وأجابوا عليه.
