--- a/journal/201904.md
+++ b/journal/201904.md
@@ -40,7 +40,7 @@
 
 [المستندات](https://github.com/decred/dcrdocs): صفحات جديدة: يصف [التعدين الأولي](https://docs.decred.org/advanced/premine/) إيردروب وإطلاق الديكريد (مصدر مشترك لسوء الفهم)، ويصف [التحقق من الأصوات](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) كيفية التحقق من أصوات التذاكر، كما توفر [المحافظ الصلبة](https://docs.decred.org/wallets/hardware-wallets/) معلومات أساسية عن محافظ الأجهزة التي تدعم DCR. تم تعديل صفحة [مقدمة الإدارة للديكريد](https://docs.decred.org/governance/overview/) من أجل تفسير أفضل للتصويت بالتذاكر ودور بوليتيا في صنع القرار.
 
-[dcrtimestamptweet](https://github.com/tiagoalvesdulce/dcrtimestamptweet): بدأ تشغيل روبوت جديد على تويتر في أواخر شهر مارس. قم بذكر [dcrtimestampbot@]https://twitter.com/dcrtimestampbot) في تعليق وسيقوم الروبوت بتخزين الموضوع في أي بي إف إس، استخدام dcrtime لتثبيت البيانات على بلوكشين الديكريد، ومراسلة المستخدم الذي استدعاه.
+[dcrtimestamptweet](https://github.com/tiagoalvesdulce/dcrtimestamptweet): بدأ تشغيل روبوت جديد على تويتر في أواخر شهر مارس. قم بذكر [dcrtimestampbot@](https://twitter.com/dcrtimestampbot) في تعليق وسيقوم الروبوت بتخزين الموضوع في أي بي إف إس، استخدام dcrtime لتثبيت البيانات على بلوكشين الديكريد، ومراسلة المستخدم الذي استدعاه.
 
 إحصائيات نشاط التطوير لشهر أبريل: 326 من المشاريع النشطة، 509  إيداع رئيسي، 96 ألف إضافة، 55 ألف عملية حذف من خلال 10 سجلات. جاءت المساهمات من 1-9 مطورين لكل سجل.
 
