--- a/journal/201904.md
+++ b/journal/201904.md
@@ -257,7 +257,7 @@
 
 [أعلنت](https://www.zfnd.org/blog/kzen-multisig/) مؤسسة Zcash عن تمويل مشروع بحثي مع KZen Networks لتمكين المعاملات الخاصة متعددة n-of-n لـ Sapling Zcash دون الحاجة إلى تغيير الإجماع. ويتصل هذا الجهد بعمل شركة kzen بشأن [التوقيعات الحدية](https://www.kzencorp.com/post/threshold-signatures-private-key-the-next-generation)، التي تشبه التوقيعات المتعددة الأطراف ولكن لا يمكن تمييزها عن التوقيعات العادية.
 
-كان "Maker DAO" [موضوعًا](https://www.coindesk.com/makerdao-set-to-increase-dai-fees-above-15-in-bid-to-stabilize-stablecoin) للجدل هذا الشهر ، في البداية مع استمرار مشكلة ربط DAI بالدولار الأمريكي (مع زيادات متكررة في الاستقرار فشلت مؤخرًا في استعادة الربط) ثم مع بعض المعلومات المتسربة حول [الصراع](https://www.coindesk.com/darkest-days-yet-purple-pill-tell-all-details-years-long-rift-at-heart-of-makerdao-stablecoin-project) مع فريق Maker. تقدم [قصة Zandy](https://www.scribd.com/document/407743542/Zandy-s-Story#from_embed) نظرة مثيرة للاهتمام في تاريخ Maker وأصل Foundation Maker كخطوة في اللحظة الأخيرة لتجنب فاتورة ضريبية باهظة، وسقوط لاحق للأطراف المعنية، مع قنوات اتصال سرية ، خارطة طريق "حبة أرجوانية" لمحاولة حل النزاع، مع طرد أعضاء مجلس الإدارة والتخلي عن مفاتيحهم المتعددة الخاصة ، و[الرسالة المسربة]https://www.coindesk.com/leaked-letter-exposes-infighting-atop-flagship-ethereum-project-makerdao) التي كشفت كل شيء.
+كان "Maker DAO" [موضوعًا](https://www.coindesk.com/makerdao-set-to-increase-dai-fees-above-15-in-bid-to-stabilize-stablecoin) للجدل هذا الشهر ، في البداية مع استمرار مشكلة ربط DAI بالدولار الأمريكي (مع زيادات متكررة في الاستقرار فشلت مؤخرًا في استعادة الربط) ثم مع بعض المعلومات المتسربة حول [الصراع](https://www.coindesk.com/darkest-days-yet-purple-pill-tell-all-details-years-long-rift-at-heart-of-makerdao-stablecoin-project) مع فريق Maker. تقدم [قصة Zandy](https://www.scribd.com/document/407743542/Zandy-s-Story#from_embed) نظرة مثيرة للاهتمام في تاريخ Maker وأصل Foundation Maker كخطوة في اللحظة الأخيرة لتجنب فاتورة ضريبية باهظة، وسقوط لاحق للأطراف المعنية، مع قنوات اتصال سرية ، خارطة طريق "حبة أرجوانية" لمحاولة حل النزاع، مع طرد أعضاء مجلس الإدارة والتخلي عن مفاتيحهم المتعددة الخاصة ، و[الرسالة المسربة](https://www.coindesk.com/leaked-letter-exposes-infighting-atop-flagship-ethereum-project-makerdao) التي كشفت كل شيء.
 
 [أعلنت](https://zcoin.io/further-disclosure-on-zerocoin-vulnerability/) Zcoin عن ثغرة أمنية في بروتوكول Zerocoin الذي سمح بإنشاء عملات مزورة ("لا تتجاوز 1٪ من العرض المتداول"). دعا فريق Zcoin إلى تعطيل Zerocoin في 9 أبريل عندما اكتشفوا المشكلة، وفي هذا المنشور في 26 أبريل ، أكد أنه سيظل معطلًا لـ Zcoin لأنه يعمل على استبدال (Sigma) وهو جاهز تقريبًا.
 
